--- a/IU.html
+++ b/IU.html
@@ -18,7 +18,7 @@
   팬덤:<img src="fan emo.png" width="25">유애나<br>
   &nbsp<br>
   유튜브 채널 <img src="yicon.svg" width="25"><a href ="https://www.youtube.com/channel/UC3SyT4_WLHzN7JmHQwKQZww" target="_blank" title="빨리 가자구">이지금 [IU Official]</a><br><!--이거 위로 예쁘게 땡기고 싶은데-->
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="yicon.svg" width="25"><a href ="https://www.youtube.com/channel/UCU8MOmf9frN_60TIGvwlQEQ" target="_blank">EDAM Entertainment</a><br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="yicon.svg" width="25"><a href ="https://www.youtube.com/channel/UCU8MOmf9frN_60TIGvwlQEQ" target="_blank">EDAM Entertainment</a><br>
 &nbsp<br>
 
 역사와 성장배경<br><br>
