--- a/palette.html
+++ b/palette.html
@@ -9,6 +9,7 @@
 <h3><a href="IU.html">IU's profile</a></h3>
 
 <h1>Palette<h1>
-  <img src ="palette.jpg" width="100%"><br>
+  <img src ="palette.jpg" width="50%"><br>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/d9IxdwEFk1c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 </body>
 </html>
